--- a/lasagna.html
+++ b/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="lasagna.webp" alt="Lasagna in a pot ready to be eaten">
+    <img src="lasagna.webp" alt="Lasagna in a pot ready to be eaten" width="600">
     <p>The lasagna is a dish that is made with pasta, meat and sauce. The best sauce to use is bechamel.</p>
     <p>Bechamel is made wiht milk and flour but if you add some mozzarella, it will vreate a melty goodnes between the pasta layers</p>
     <h2>Ingredients</h2>
