--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><a href="recipes/lasagna.html">Odin Recipes</a></h1>
+    <h1><a href="lasagna.html">Odin Recipes</a></h1>
 </body>
 </html>
